# honeycomb-pycpp

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  README.md  monkey_patch.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build-wheels.yml
.github/workflows/scripts/: set_package_name.py
honeycomb/pycpp/distro/: __init__.py  _config.py  patch_api.py  version.py
honeycomb/pycpp/distro/embedded/: otel.yaml
include/: logger_wrapper.h  meter_wrapper.h  py_attribute_iterable.h  sdk_wrapper.h  tracer_wrapper.h
opentelemetry-cpp-distro/: pyproject.toml  test-requirements.txt
opentelemetry-cpp-distro/src/opentelemetry/cpp/distro/: __init__.py
src/: bindings.cpp  logger_wrapper.cpp  meter_wrapper.cpp  sdk_wrapper.cpp  tracer_wrapper.cpp
tests/: test_api.py  test_logging_api.py  test_metrics_api.py  test_patch_api.py  test_sdk.py  test_tracing_api.py
tests/testdata/: otel_never_sample.yaml
