[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "pybind11>=2.10.0", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Honeycomb Authors", email = "support@honeycomb.io"},
]
name = "honeycomb-pycpp"
version = "0.1.8"
description = "Honeycomb OpenTelemetry distro which embeds the C++ SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.61b0",
]

[project.urls]
Homepage = "https://github.com/honeycombio/honeycomb-pycpp"

[project.entry-points.opentelemetry_configurator]
cpp_configurator = "honeycomb.pycpp.distro:OpenTelemetryConfigurator"

[project.entry-points.opentelemetry_distro]
cpp_distro = "honeycomb.pycpp.distro:OpenTelemetryDistro"

[tool.setuptools.packages.find]
namespaces = true
exclude = ["tests*"]

[tool.setuptools.package-data]
"honeycomb.pycpp.distro" = ["embedded/otel.yaml", "py.typed"]

[tool.cibuildwheel.macos]
repair-wheel-command = """
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel \
--require-archs {delocate_archs} -w {dest_dir} -v {wheel}
"""

[tool.cibuildwheel]
build-verbosity = 0
before-build = """
  pip install -r requirements-dev.txt
"""
environment-pass = ["ARCH", "CPP_VERSION", "CURL_VERSION", "OTEL_PROTO_VERSION", "PROTO_VERSION", "JSON_VERSION", "MACOSX_DEPLOYMENT_TARGET", "PIP_ONLY_BINARY"]
test-command = "python -c 'import honeycomb_pycpp; print(\"Import successful\")'"
before-all = """
  set -ex

  # Determine install prefix before the cache check so restore goes to the right place.
  CURL_SSL_OPTS="--with-openssl"
  INSTALLDIR="/usr/local"
  if command -v brew &> /dev/null; then
    INSTALLDIR="$(brew --prefix)"
  fi

  # Per-arch cache: /project is the workspace mount inside Linux containers;
  # $GITHUB_WORKSPACE is used on macOS where the script runs on the host directly.
  if [ -d "/cibw-cache" ]; then
    CACHE="/cibw-cache/$ARCH"
  elif [ -n "$GITHUB_WORKSPACE" ]; then
    CACHE="$GITHUB_WORKSPACE/.cibw-cache/$ARCH"
  else
    CACHE="$HOME/.cibw-cache/$ARCH"
  fi
  STAMP="$CACHE/.built-curl-$CURL_VERSION-protobuf-$PROTO_VERSION-json-$JSON_VERSION-otel-$CPP_VERSION"

  # Check cache BEFORE installing packages. On a hit the cached prefix (including
  # any previously built OTel/curl/protobuf artifacts) is restored, so there is no
  # need to run the package manager at all — saving ~1–2 min on every cache hit.
  if [ -f "$STAMP" ]; then
    echo "Cache hit for $ARCH — restoring deps"
    # || true: tar exits non-zero when it encounters files already present in
    # $INSTALLDIR from the base image (autotools, libtool, etc.). Our OTel/curl
    # files are extracted successfully before those conflicts are hit.
    (cd "$CACHE/usr" && tar -cf - .) | (cd "$INSTALLDIR" && tar -xmf -) || true
    ldconfig || true
    exit 0
  fi
  echo "Cache miss for $ARCH — building from source"

  # Install build tools and dependencies (check which package manager is available)
  if command -v yum &> /dev/null; then
    # Try cmake first, fall back to cmake3
    yum install -y cmake gcc-c++ openssl-devel libcurl-devel zlib-devel wget tar autoconf automake libtool yaml-cpp-devel || \
    yum install -y cmake3 gcc-c++ openssl-devel libcurl-devel zlib-devel wget tar autoconf automake libtool yaml-cpp-devel
    # Create cmake symlink if only cmake3 exists
    if [ ! -f /usr/bin/cmake ] && [ -f /usr/bin/cmake3 ]; then
      ln -sf /usr/bin/cmake3 /usr/bin/cmake
    fi
  elif command -v apk &> /dev/null; then
    apk add --no-cache cmake g++ openssl-dev curl-dev zlib-dev wget autoconf automake libtool yaml-cpp-dev linux-headers
  elif command -v apt-get &> /dev/null; then
    apt-get update
    apt-get install -y cmake g++ libssl-dev libcurl4-openssl-dev zlib1g-dev wget autoconf automake libtool libyaml-cpp-dev
  elif command -v brew &> /dev/null; then
    # Do NOT install grpc via brew: brew's gRPC is split into 80+ individual
    # libabsl_*.dylib files that delocate must bundle one-by-one, making the
    # repair-wheel step take ~19 min per Python version.  Instead we let OTel's
    # cmake FetchContent pull and build gRPC+abseil statically (same as Linux),
    # so delocate only needs to bundle libcurl, libssl, and libcrypto.
    brew install cmake openssl curl wget autoconf automake libtool yaml-cpp
    OPENSSL_OPTS="-DOPENSSL_ROOT_DIR=$(brew --prefix openssl)"
    CURL_OPTS="-DCURL_ROOT_DIR=$(brew --prefix curl)"
    CURL_SSL_OPTS="--with-openssl=$(brew --prefix openssl)"
  fi

  # Build and install a newer curl (required for OpenTelemetry HTTP exporter)
  cd /tmp
  wget -q https://curl.se/download/curl-$CURL_VERSION.tar.gz
  tar -xzf curl-$CURL_VERSION.tar.gz
  cd /tmp/curl-$CURL_VERSION
  ./configure --prefix=$INSTALLDIR $CURL_SSL_OPTS
  make -j2
  make install
  command -v ldconfig &>/dev/null && ldconfig || true

  # Build and install protobuf from source on all platforms.
  # On Linux gRPC is fetched via FetchContent and needs -DgRPC_PROTOBUF_PROVIDER=package
  # to avoid pulling in a second copy.  On macOS we no longer use brew's gRPC (see
  # comment above), so OTel will also FetchContent gRPC and needs the same treatment.
  cd /tmp
  wget -q https://github.com/protocolbuffers/protobuf/releases/download/v21.12/protobuf-cpp-$PROTO_VERSION.tar.gz
  tar -xzf protobuf-cpp-$PROTO_VERSION.tar.gz
  cd /tmp/protobuf-$PROTO_VERSION
  cmake -B build -DCMAKE_INSTALL_PREFIX=$INSTALLDIR -DCMAKE_POSITION_INDEPENDENT_CODE=ON -Dprotobuf_BUILD_TESTS=OFF
  cmake --build build -j2
  cmake --install build
  command -v ldconfig &>/dev/null && ldconfig || true

  # Install nlohmann-json
  cd /tmp
  wget -q https://github.com/nlohmann/json/releases/download/v$JSON_VERSION/json.tar.xz
  tar -xf json.tar.xz
  cd /tmp/json
  cmake -B build -DCMAKE_INSTALL_PREFIX=$INSTALLDIR -DJSON_BuildTests=OFF
  cmake --build build -j2
  cmake --install build

  # Install OpenTelemetry Proto v$OTEL_PROTO_VERSION (includes semantic conventions)
  cd /tmp
  wget -q https://github.com/open-telemetry/opentelemetry-proto/archive/refs/tags/v$OTEL_PROTO_VERSION.tar.gz
  tar -xzf v$OTEL_PROTO_VERSION.tar.gz

  cd /tmp
  wget -q https://github.com/open-telemetry/opentelemetry-cpp/archive/refs/tags/v$CPP_VERSION.tar.gz
  tar -xzf v$CPP_VERSION.tar.gz
  cd /tmp/opentelemetry-cpp-$CPP_VERSION

  # Build everything statically on all platforms.
  #
  # macOS previously used SHARED_LIBS=ON with brew's gRPC, but brew's abseil is
  # split into 80+ individual .dylib files that delocate-wheel must process one
  # by one, making the repair-wheel step take ~19 min per Python version.  With
  # SHARED_LIBS=OFF and OTel FetchContent-downloading gRPC+abseil, those libs are
  # compiled directly into the extension and delocate only needs to bundle
  # libcurl, libssl, and libcrypto — reducing repair time to seconds.
  #
  # On all platforms: set gRPC_PROTOBUF_PROVIDER=package so that gRPC (however it
  # is fetched) uses the protobuf we already built rather than downloading its own
  # copy, which would cause duplicate descriptor registration at import time.
  #
  # On macOS: set gRPC_SSL_PROVIDER=package so gRPC uses brew's openssl (same as
  # our curl build) instead of fetching boringssl, avoiding two TLS implementations
  # with overlapping symbol names in the same binary.
  SHARED_LIBS=OFF
  if command -v brew &> /dev/null; then
    EXTRA_CMAKE_OPTS="-DgRPC_PROTOBUF_PROVIDER=package -DgRPC_SSL_PROVIDER=package $OPENSSL_OPTS"
  else
    EXTRA_CMAKE_OPTS="-DgRPC_PROTOBUF_PROVIDER=package"
  fi

  cmake -B build \
    -DCMAKE_CXX_STANDARD=17 \
    -DCMAKE_INSTALL_PREFIX=$INSTALLDIR \
    -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
    -DOTELCPP_PROTO_PATH=/tmp/opentelemetry-proto-$OTEL_PROTO_VERSION \
    -DWITH_OTLP_HTTP=ON \
    -DWITH_OTLP_GRPC=ON \
    -DBUILD_TESTING=OFF \
    -DWITH_EXAMPLES=OFF \
    -DWITH_BENCHMARK=OFF \
    -DWITH_CONFIGURATION=ON \
    -DWITH_YAML_CONFIGURATION=ON \
    -DWITH_YAML=ON \
    -DBUILD_SHARED_LIBS=$SHARED_LIBS \
    $EXTRA_CMAKE_OPTS

  cmake --build build -j2
  cmake --install build

  # Save compiled artifacts to cache
  mkdir -p "$CACHE/usr"
  (cd "$INSTALLDIR" && tar -cf - .) | (cd "$CACHE/usr" && tar -xf -)
  touch "$STAMP"

  # Clean up source tarballs
  cd /
  rm -rf /tmp/* || true
"""
